# Vapoursynth-EEDI3METAL

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
lib/: CMakeLists.txt  EEDI3.h  EEDI3Metal_shared.h  eedi3metal.mm  kernel.metal
